--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "sass": "^1.83.0"
   },
   "devDependencies": {
